# osmtoolz

./: .gitignore  CMakeLists.txt  README.md  bz2_to_gz.sh
common/: cmd_func.c  cmd_func.h  osm_info.c  osm_info.h  read_version.c  read_version.h  simple_sax.c  simple_sax.h  std_param.c  std_param.h  zblock_io.c  zblock_io.h
osm_cut/: CMakeLists.txt  main.c  osm_cut.h  osm_cut_func.c  osm_cut_node.c  osm_cut_rel.c  osm_cut_way.c  osm_node_write.c  osm_rel_write.c  osm_way_write.c
osm_huge/: CMakeLists.txt  main.c  osm_cut_func.c  osm_cut_node_rect.c  osm_cut_node_write.c  osm_cut_way_rect.c  osm_cut_way_write.c  osm_huge.h
osm_merge/: head.txt  main.c  omerge.sh  osm_merge  osm_merge.h
osm_split/: CMakeLists.txt  main.c  osm_split.c  osm_split.h  osm_write_node.c  test.sh
